--- a/DeSS_T_Frontend/src/index.css
+++ b/DeSS_T_Frontend/src/index.css
@@ -24,11 +24,14 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--bg-color, #ffffff);
+  color: var(--text-color, #213547);
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
 
 h1 {
   font-size: 3.2em;
