--- a/DeSS_T_Frontend/src/style/App.css
+++ b/DeSS_T_Frontend/src/style/App.css
@@ -1,6 +1,6 @@
 body {
-  font-family: system-ui, sans-serif;
-  background-color: #f6f8fa;
+  font-family: "Lexend", system-ui, sans-serif;
+  background-color: #f4f4f4;
   color: #333;
   padding: 0;
   margin: 0;
