--- a/DeSS_T_Frontend/src/index.css
+++ b/DeSS_T_Frontend/src/index.css
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Lexend", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -27,11 +31,10 @@ body {
   display: block;
   min-width: 320px;
   min-height: 100vh;
-  background-color: var(--bg-color, #ffffff);
+  background-color: var(--bg-color, #f4f4f4);
   color: var(--text-color, #213547);
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Lexend", system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
-
 
 h1 {
   font-size: 3.2em;
