--- a/DeSS_T_Frontend/src/style/GuestDecision.css
+++ b/DeSS_T_Frontend/src/style/GuestDecision.css
@@ -40,7 +40,7 @@
 }
 
 .decision_container {
-  width: full;
+  width: 70%;
   height: 80vb;
   background: #ffffff;
   box-shadow: 30px 30px 50px rgba(0, 0, 0, 0.25);
