--- a/DeSS_T_Frontend/src/style/configuration.css
+++ b/DeSS_T_Frontend/src/style/configuration.css
@@ -104,9 +104,10 @@
   right: 0;
   z-index: 100;
   margin: 0;
-  padding: 1.5rem 0;
-  padding-left: 2rem;
-  height: 60px;
+  padding: 0 2rem;
+  height: 70px;
+  display: flex;
+  align-items: center;
 
   background: #ffffff;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
@@ -148,6 +149,7 @@
   box-shadow: -10px 4px 10px rgba(0, 0, 0, 0.1),
     10px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 30px 30px 30px 30px;
+  width: 75%;
   height: 100%;
   display: flex;
   flex-direction: column;
