--- a/DeSS_T_Frontend/src/style/Scenario.css
+++ b/DeSS_T_Frontend/src/style/Scenario.css
@@ -3,3 +3,27 @@
   box-shadow: 5px 4px 5px rgba(0, 0, 0, 0.25);
   border-radius: 0px 40px 40px 0px;
 }
+
+.mode-selected {
+  background: #ffffff;
+  box-shadow: 5px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 15px 15px 0px 0px;
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 38px;
+  color: #81069e;
+}
+
+.mode-unselected {
+  background: #81069e;
+  box-shadow: 5px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 15px 15px 0px 0px;
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 38px;
+  color: #ffffff;
+}
