--- a/DeSS_T_Frontend/src/style/Scenario.css
+++ b/DeSS_T_Frontend/src/style/Scenario.css
@@ -27,3 +27,82 @@
   line-height: 38px;
   color: #ffffff;
 }
+
+.map-container {
+  background: #ffffff;
+  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 40px 0px 0px 40px;
+}
+
+.map {
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.btn_primary {
+  background: #81069e;
+  border-radius: 20px;
+  height: 40px;
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 15px;
+  text-align: center;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
+
+.btn_primary:hover {
+  background: #5d0971;
+}
+
+.btn_secondary {
+  background: #ffffff;
+  border: 2px solid #81069e;
+  border-radius: 20px;
+  height: 40px;
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 15px;
+  text-align: center;
+  color: #81069e;
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
+
+.btn_secondary:hover {
+  background: #f4eaff;
+  border: 2px solid #81069e;
+}
+
+.text-header-map {
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  color: #323232;
+}
+
+.time-inputs {
+  background: #ffffff;
+  border: 3px solid #81069e;
+  border-radius: 35px;
+}
+
+.config-name {
+  font-family: "Lexend";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  color: #323232;
+}
