--- a/DeSS_T_Frontend/src/style/GuestDecision.css
+++ b/DeSS_T_Frontend/src/style/GuestDecision.css
@@ -79,7 +79,7 @@
   font-size: 25px;
   line-height: 44px;
   text-align: center;
-  color: #323232;
+  /* color: #323232; */
 }
 
 .question {
@@ -90,5 +90,5 @@
   line-height: 28px;
   text-align: center;
 
-  color: #323232;
+  /* color: #323232; */
 }
