remove blank page

--- a/DeSS_T_Frontend/src/style/Output.css
+++ b/DeSS_T_Frontend/src/style/Output.css
@@ -276,3 +276,11 @@
   background: transparent;
   border: none;
 }
+
+/* Print styles */
+@media print {
+  .dashboard-bg {
+    border-radius: 0 !important;
+    box-shadow: none !important;
+  }
+}
