--- a/DeSS_T_Frontend/src/style/navbar.css
+++ b/DeSS_T_Frontend/src/style/navbar.css
@@ -46,6 +46,21 @@
   font-size: 14px;
 }
 
+.nav-user {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  min-width: 40px;
+}
+
+.nav-user-avatar {
+  width: 38px;
+  height: 38px;
+  border-radius: 999px;
+  border: 2px solid #81069e;
+  object-fit: cover;
+}
+
 .confirm-modal-overlay {
   position: fixed;
   inset: 0;
