--- a/DeSS_T_Frontend/src/style/Workspace.css
+++ b/DeSS_T_Frontend/src/style/Workspace.css
@@ -9,6 +9,9 @@
   display: flex;
   gap: 24px;
   padding: 24px;
+  padding-left: 0%;
+  padding-bottom: 0%;
+  padding-right: 0%; 
   align-items: stretch;
 }
 
@@ -74,6 +77,7 @@
   border-radius: 24px;
   box-shadow: 0 4px 18px rgba(0, 0, 0, 0.1);
   padding: 24px 28px 80px;
+  padding-bottom: 600px;
   position: relative;
   min-height: calc(100vh - 70px - 48px);
 }
