--- a/DeSS_T_Frontend/src/style/Dropdown.css
+++ b/DeSS_T_Frontend/src/style/Dropdown.css
@@ -23,3 +23,11 @@
   background-color: #81069e;
   margin: 0;
 }
+
+.dropdown-option-text {
+  display: block;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
